--- a/x-pack/metricbeat/module/aws/cloudwatch/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/cloudwatch/_meta/docs.asciidoc
@@ -11,3 +11,14 @@ cloudwatch:GetMetricData
 cloudwatch:ListMetrics
 tag:getResources
 ----
+
+[float]
+=== Module-specific configuration notes
+* *namespace*: The namespace to filter against. For example, AWS/EC2, AWS/S3.
+* *metricname*: The name of the metric to filter against. For example, CPUUtilization for EC2 instance.
+* *dimensions*: The dimensions to filter against. For example, InstanceId=i-123.
+* *tags.resource_type_filter*: The constraints on the resources that you want returned.
+The format of each resource type is service[:resourceType].
+For example, specifying a resource type of ec2 returns all Amazon EC2 resources
+(which includes EC2 instances). Specifying a resource type of ec2:instance returns
+only EC2 instances.
